--- a/Quiz.html
+++ b/Quiz.html
@@ -366,11 +366,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="Project.html">Circulatory System</a>
+      <a class="navbar-brand" href="index.html">Circulatory System</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="Project.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Heart.html">Heart</a></li>
         <li><a href="lungs.html">Lungs</a></li>
         <li><a href="Viens and Arteries.html">Veins and Arteries</a></li>
